kubernetes/clusters/elysia/longhorn/ingress-remote.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress-remote
  namespace: longhorn-system
  annotations:
    cloudflare-tunnel-ingress-controller.strzibny.name/backend-protocol: "http"
    cloudflare-tunnel-ingress-controller.strzibny.name/ssl-verify: "false"
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: "longhorn.elysia.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
